--- a/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
+++ b/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
@@ -54,7 +54,8 @@
 			  gap="0">
 
 		<s:Group width="100%"
-				 height="85%">
+				 height="85%"
+                 click="hostComponent.close()">
 			<s:Rect width="100%"
 					height="100%">
 				<s:fill>
@@ -84,12 +85,12 @@
 				<mx:Image id="resourceImage"
 						  width="100%"
 						  height="100%"
-						  smoothBitmapContent="true"/>
+						  smoothBitmapContent="true"
+                          />
 			</s:HGroup>
 
 			<mx:Canvas width="100%"
 					   height="100%"
-					   click="hostComponent.close()"
 					   backgroundColor="#000000"
 					   backgroundAlpha="0.01"/>
 		</s:Group>
