bug fix: description update view value's shouldn't be reset after change listItemVO
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8954 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/PropertiesDescriptionsUpdateComponent.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/PropertiesDescriptionsUpdateComponent.mxml
@@ -130,20 +130,18 @@
                 return;
             }
 
-            var descriptionView : DescriptionUpdateView = selectedItem.descriptionUpdateView || createNewDescriptionUpdateView(selectedItem);
+            var descriptionView : DescriptionUpdateView = selectedItem.descriptionUpdateView;
 
-            if ( !descriptionView )
+            if (!descriptionView)
             {
-                descriptionsStack.visible = false;
-                return;
-            }
+                descriptionView = createNewDescriptionUpdateView(selectedItem);
 
-            descriptionView.oldValue = selectedItem.oldValue;
-            descriptionView.newValue = selectedItem.newValue;
+                descriptionView.oldValue = selectedItem.oldValue;
+                descriptionView.newValue = selectedItem.newValue;
+            }
 
             descriptionsStack.visible = true;
             descriptionsStack.selectedChild = descriptionView;
-
         }
 
         private function btnClose_clickHandler( event : MouseEvent ) : void
