--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/renderer/DescriptionsListItemRenderer.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/renderer/DescriptionsListItemRenderer.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
-                doubleClickEnabled="false"
-                creationComplete="creationCompleteHandler(event)">
+                doubleClickEnabled="false">
 
     <s:states>
         <s:State name="normal"/>
@@ -51,7 +50,7 @@
 
         public function changeLabelColor() : void
         {
-            if (!data)
+            if ( !data )
                 return;
 
             if ( !data.newValue )
@@ -68,14 +67,14 @@
             }
         }
 
-        private function creationCompleteHandler( event : FlexEvent ) : void
+        override public function set data( value : Object ) : void
         {
+            super.data = value;
+
             var updateDescriptionEvent : UpdateDescriptionEvent = new UpdateDescriptionEvent( UpdateDescriptionEvent.DESCRIPTIONS_FILL_VALUES );
 
             dispatchEvent( updateDescriptionEvent );
         }
-
-
         ]]>
     </fx:Script>
 </s:ItemRenderer>
