--- a/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
@@ -300,7 +300,7 @@
         ]]>
 	</fx:Script>
 
-    <s:Rect left="0" width="100%" top="0" bottom="0">
+    <s:Rect left="-2" width="100%" top="-2" bottom="-2">
         <s:fill>
             <s:SolidColor id="rectColor"
                           color.normal="#3A3A3A"
@@ -313,9 +313,9 @@
     <s:Group id="groupContent"
              left="20"
              width="100%"
-             top="0"
+             top="-2"
              minWidth="200"
-             bottom="0">
+             bottom="-2">
 
         <s:HGroup  width="100%" height="100%" verticalAlign="middle">
 
@@ -344,14 +344,14 @@
     </s:Group>
 
     <s:Group id="eyesGroup"
-             top="0"
-             bottom="0"
-             left="0"
+             top="-2"
+             bottom="-2"
+             left="-2"
              width="22"
              height="100%"
              mouseDown="{ eyeClickHandler(event); event.stopImmediatePropagation() }">
 
-        <s:Rect width="100%" top="0" bottom="0">
+        <s:Rect width="100%" top="0" bottom="-2">
             <s:fill>
                 <s:SolidColor color="#585858" />
             </s:fill>
@@ -363,13 +363,13 @@
 
     </s:Group>
 
-    <s:Line top="0" left="0" right="0">
+    <s:Line top="-2" left="-2" width="100%">
         <s:stroke>
             <s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1" />
         </s:stroke>
     </s:Line>
 
-    <s:Line bottom="0" left="0" right="0">
+    <s:Line bottom="-2" left="-2" width="100%">
         <s:stroke>
             <s:SolidColorStroke color="#000000" alpha="0.5" weight="1" />
         </s:stroke>
