--- a/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
+++ b/IDE/common/src/net/vdombox/ide/common/view/skins/windows/ResourcePreviewWindowSkin.mxml
@@ -55,7 +55,7 @@
 
 		<s:Group width="100%"
 				 height="85%"
-                 click="hostComponent.close()">
+                 >
 			<s:Rect width="100%"
 					height="100%">
 				<s:fill>
@@ -92,7 +92,8 @@
 			<mx:Canvas width="100%"
 					   height="100%"
 					   backgroundColor="#000000"
-					   backgroundAlpha="0.01"/>
+					   backgroundAlpha="0.01"
+					   click="hostComponent.close()"/>
 		</s:Group>
 
 		<s:Group width="100%"
