git-svn-id: http://svn.vdombox.ru/flextools/trunk@8970 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -58,10 +58,13 @@
         private var appInstalled : Boolean;
         private var timer : Number;
 
+        [Bindable]
         public var isDesktopApplication : Boolean = true;
-
+        [Bindable]
         public var closable : Boolean = false;
+        [Bindable]
         public var maximizable : Boolean = false;
+        [Bindable]
         public var minimizable : Boolean = false;
 
         private function init() : void
