git-svn-id: http://svn.vdombox.ru/flextools/trunk@8972 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuTooltip.mxml
+++ b/PowerPack/PowerPack/src/net/vdombox/powerpack/powerpackscript/AssistMenuTooltip.mxml
@@ -60,7 +60,7 @@
 		<mx:Text maxHeight="450" maxWidth="450"
 				 htmlText="{data.toString()}"
 				 textAlign="left"
-				 selectable="true" focusEnabled="false"/>
+				 selectable="true"/>
 		
 	</mx:VBox>
 
