--- a/PowerPack/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
+++ b/PowerPack/PowerPack/src/net/vdombox/powerpack/control/controlbar/GraphEditorControlBar.mxml
@@ -1,146 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:ControlBar xmlns:mx="http://www.adobe.com/2006/mxml"
-			   xmlns:control="net.vdombox.powerpack.control.*"
 			   styleName="categoryCtrlBarStyle"
 			   height="24"
-			   horizontalAlign="left" verticalAlign="center"
+			   horizontalAlign="left"
+               verticalAlign="middle"
 			   horizontalGap="2"
 			   tabChildren="false" xmlns:controlbar="net.vdombox.powerpack.control.controlbar.*">
 	<mx:Script>
 		<![CDATA[
-			import mx.events.FlexEvent;
-			
-			import net.vdombox.powerpack.graph.GraphCanvas;
-			import net.vdombox.powerpack.graph.Node;
-			import net.vdombox.powerpack.lib.player.graph.NodeCategory;
-			import net.vdombox.powerpack.lib.player.managers.ContextManager;
-			
-			public static const DESTINATION_OBJECT_GRAPH_CANVAS		: String = "graph_canvas";
-			public static const DESTINATION_OBJECT_GRAPH_NODE		: String = "graph_node";
-			public static const DESTINATION_OBJECT_GRAPH_TRANSITION	: String = "graph_transition";
-			
-			// graph canvas items
-			public static const ITEM_TYPE_ADD_NORMAL_STATE			: String = "add_state";
-			public static const ITEM_TYPE_ADD_SUBGRAPH_STATE		: String = "add_sub";
-			public static const ITEM_TYPE_ADD_COMMAND_STATE			: String = "add_command";
-			public static const ITEM_TYPE_ADD_RESOURCE_STATE		: String = "add_resource";
-			
-			public static const ITEM_TYPE_CUT						: String = "cut";
-			public static const ITEM_TYPE_COPY						: String = "copy";
-			public static const ITEM_TYPE_PASTE						: String = "paste";
-			public static const ITEM_TYPE_DELETE					: String = "delete";
-			public static const ITEM_TYPE_CLEAR						: String = "clear";
-			
-			public static const ITEM_TYPE_EXPAND_SPACE				: String = "expand_space";
-			public static const ITEM_TYPE_COLLAPSE_SPACE			: String = "collapse_space";
-			
-			// graph node items
-			public static const ITEM_TYPE_ADD_TRANSITION			: String = "add_trans";
-			public static const ITEM_TYPE_JUMP_TO_GRAPH				: String = "jump";
-			public static const ITEM_TYPE_INITIAL_NODE				: String = "initial";
-			public static const ITEM_TYPE_TERMINAL_NODE				: String = "terminal";
-			public static const ITEM_TYPE_CONVERT_TO_NORMAL_NODE	: String = "normal";
-			public static const ITEM_TYPE_CONVERT_TO_SUBGRAPH_NODE	: String = "subgraph";
-			public static const ITEM_TYPE_CONVERT_TO_COMMAND_NODE	: String = "command";
-			public static const ITEM_TYPE_CONVERT_TO_RESOURCE_NODE	: String = "resource";
-			public static const ITEM_TYPE_ENABLE_NODE				: String = "enabled";
-			public static const ITEM_TYPE_TOGGLE_BREAKPOINT			: String = "breakpoint";
-			
-			// graph transition items
-			public static const ITEM_TYPE_SELECT_TRANSITION			: String = "select_trans";
-			public static const ITEM_TYPE_CHANGE_TRANSITION_ENABLE	: String = "enable";
-			
-			protected function controlBarItem_clickHandler(event:MouseEvent, itemType : String, objectType:String=DESTINATION_OBJECT_GRAPH_CANVAS):void
-			{
-				var evt : ControlBarEvent = new ControlBarEvent(ControlBarEvent.EVENT_ITEM_CLICK);
-				evt.targetItemType = itemType;
-				evt.destinationObjectType = objectType;
-				
-				dispatchEvent(evt);
-			}
-			
-			private var locked : Boolean;
-			
-			private function lock () : void
-			{
-				for each (var obj : Object in getChildren())
-				{
-					if (obj is ControlBarButton)
-						obj.enabled = false;
-				}
-				
-				locked = true;
-			}
-			
-			private function unlock () : void
-			{
-				for each (var obj : Object in getChildren())
-				{
-					if (obj is ControlBarButton)
-						obj.enabled = true;
-				}
-				
-				locked = false;
-			}
-			
-			public function updateButtonsState (graph : GraphCanvas) : void
-			{
-				lock ();
-				
-				if (!graph)
-					return;
-				
-				var selectedNodesAmount : int = graph.selectedNodesAmount;
-				var selectedArrowsAmount : int = graph.selectedArrowsAmount;
-				
-				btnClear.enabled = true;
-				
-				btnNewNormalState.enabled = true;
-				btnNewCommandState.enabled = true;
-				btnNewSubgraphState.enabled = true;
-				btnNewResourceState.enabled = true;
-				
-				if (selectedArrowsAmount == 1)
-				{
-					if (graph.selectedArrow && graph.selectedArrow.label)
-						btnEditTransition.enabled = true;
-					
-					btnDelete.enabled = true;
-				}
-				
-				if (selectedNodesAmount == 0)
-				{
-					if ( Clipboard.generalClipboard.hasFormat( GraphCanvas.CLIPBOARD_GRAPH_FORMAT ) )
-						btnPaste.enabled = true;
-				} 
-				else if (selectedNodesAmount > 0)
-				{
-					btnCut.enabled = true;
-					btnCopy.enabled = true;
-					btnPaste.enabled = true;
-					btnDelete.enabled = true;
-					
-					btnConvertToNormal.enabled = true;
-					btnConvertToCommand.enabled = true;
-					btnConvertToSubgraph.enabled = true;
-					
-					btnToggleBreakpoint.enabled = true;
-					btnTerminalNode.enabled = true;
-					
-					if (selectedNodesAmount == 1)
-					{
-						btnAddTransition.enabled = true;
-						btnInitialNode.enabled = true;
-						
-						var selectedNode : Node = graph.selectedNodes[0];
-						
-						btnJump.enabled = selectedNode.canJumpToGraph;
-					}
-				}
-					
-			}
-			
-		]]>
+        import net.vdombox.powerpack.graph.GraphCanvas;
+        import net.vdombox.powerpack.graph.Node;
+
+        public static const DESTINATION_OBJECT_GRAPH_CANVAS : String = "graph_canvas";
+        public static const DESTINATION_OBJECT_GRAPH_NODE : String = "graph_node";
+        public static const DESTINATION_OBJECT_GRAPH_TRANSITION : String = "graph_transition";
+        // graph canvas items
+        public static const ITEM_TYPE_ADD_NORMAL_STATE : String = "add_state";
+        public static const ITEM_TYPE_ADD_SUBGRAPH_STATE : String = "add_sub";
+        public static const ITEM_TYPE_ADD_COMMAND_STATE : String = "add_command";
+        public static const ITEM_TYPE_ADD_RESOURCE_STATE : String = "add_resource";
+        public static const ITEM_TYPE_CUT : String = "cut";
+        public static const ITEM_TYPE_COPY : String = "copy";
+        public static const ITEM_TYPE_PASTE : String = "paste";
+        public static const ITEM_TYPE_DELETE : String = "delete";
+        public static const ITEM_TYPE_CLEAR : String = "clear";
+        public static const ITEM_TYPE_EXPAND_SPACE : String = "expand_space";
+        public static const ITEM_TYPE_COLLAPSE_SPACE : String = "collapse_space";
+        // graph node items
+        public static const ITEM_TYPE_ADD_TRANSITION : String = "add_trans";
+        public static const ITEM_TYPE_JUMP_TO_GRAPH : String = "jump";
+        public static const ITEM_TYPE_INITIAL_NODE : String = "initial";
+        public static const ITEM_TYPE_TERMINAL_NODE : String = "terminal";
+        public static const ITEM_TYPE_CONVERT_TO_NORMAL_NODE : String = "normal";
+        public static const ITEM_TYPE_CONVERT_TO_SUBGRAPH_NODE : String = "subgraph";
+        public static const ITEM_TYPE_CONVERT_TO_COMMAND_NODE : String = "command";
+        public static const ITEM_TYPE_CONVERT_TO_RESOURCE_NODE : String = "resource";
+        public static const ITEM_TYPE_ENABLE_NODE : String = "enabled";
+        public static const ITEM_TYPE_TOGGLE_BREAKPOINT : String = "breakpoint";
+        // graph transition items
+        public static const ITEM_TYPE_SELECT_TRANSITION : String = "select_trans";
+        public static const ITEM_TYPE_CHANGE_TRANSITION_ENABLE : String = "enable";
+
+        protected function controlBarItem_clickHandler( event : MouseEvent, itemType : String, objectType : String = DESTINATION_OBJECT_GRAPH_CANVAS ) : void
+        {
+            var evt : ControlBarEvent = new ControlBarEvent( ControlBarEvent.EVENT_ITEM_CLICK );
+            evt.targetItemType = itemType;
+            evt.destinationObjectType = objectType;
+
+            dispatchEvent( evt );
+        }
+
+        private var locked : Boolean;
+        private function lock() : void
+        {
+            for each ( var obj : Object in getChildren() )
+            {
+                if ( obj is ControlBarButton )
+                {
+                    obj.enabled = false;
+                }
+            }
+            locked = true;
+        }
+        private function unlock() : void
+        {
+            for each ( var obj : Object in getChildren() )
+            {
+                if ( obj is ControlBarButton )
+                {
+                    obj.enabled = true;
+                }
+            }
+            locked = false;
+        }
+        public function updateButtonsState( graph : GraphCanvas ) : void
+        {
+            lock();
+            if ( !graph )
+            {
+                return;
+            }
+            var selectedNodesAmount : int = graph.selectedNodesAmount;
+            var selectedArrowsAmount : int = graph.selectedArrowsAmount;
+            btnClear.enabled = true;
+            btnNewNormalState.enabled = true;
+            btnNewCommandState.enabled = true;
+            btnNewSubgraphState.enabled = true;
+            btnNewResourceState.enabled = true;
+            if ( selectedArrowsAmount == 1 )
+            {
+                if ( graph.selectedArrow && graph.selectedArrow.label )
+                {
+                    btnEditTransition.enabled = true;
+                }
+                btnDelete.enabled = true;
+            }
+            if ( selectedNodesAmount == 0 )
+            {
+                if ( Clipboard.generalClipboard.hasFormat( GraphCanvas.CLIPBOARD_GRAPH_FORMAT ) )
+                {
+                    btnPaste.enabled = true;
+                }
+            }
+            else if ( selectedNodesAmount > 0 )
+            {
+                btnCut.enabled = true;
+                btnCopy.enabled = true;
+                btnPaste.enabled = true;
+                btnDelete.enabled = true;
+                btnConvertToNormal.enabled = true;
+                btnConvertToCommand.enabled = true;
+                btnConvertToSubgraph.enabled = true;
+                btnToggleBreakpoint.enabled = true;
+                btnTerminalNode.enabled = true;
+                if ( selectedNodesAmount == 1 )
+                {
+                    btnAddTransition.enabled = true;
+                    btnInitialNode.enabled = true;
+                    var selectedNode : Node = graph.selectedNodes[0];
+                    btnJump.enabled = selectedNode.canJumpToGraph;
+                }
+            }
+        }
+        ]]>
 	</mx:Script>
 	
 	<controlbar:ControlBarButton id="btnNewNormalState" 
