--- a/PowerPack/PowerPack/src/net/vdombox/powerpack/panel/ResourcesPanel.mxml
+++ b/PowerPack/PowerPack/src/net/vdombox/powerpack/panel/ResourcesPanel.mxml
@@ -18,7 +18,7 @@
 
         import net.vdombox.powerpack.managers.ResourcesManager;
 
-        private function updateResourcesList() : void
+        public function updateResourcesList() : void
         {
             grid.dataProvider = resourcesManager.allResources;
             grid.invalidateList();
